--- a/index.html
+++ b/index.html
@@ -1,75 +1,54 @@
-<!DOCTYPE html><html lang="fr">
+<!DOCTYPE html>
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tana Events Calendar</title>
+  <title>Calendrier Simple</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f6f8fa;
-      padding: 2rem;
-    }
-    h1 {
-      color: #2c3e50;
-      text-align: center;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 2rem;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 1rem;
-      text-align: left;
-    }
-    th {
-      background-color: #2c3e50;
-      color: white;
-    }
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
+    table { border-collapse: collapse; width: 300px; }
+    th, td { border: 1px solid #ccc; width: 40px; height: 40px; text-align: center; }
+    th { background: #f0f0f0; }
   </style>
 </head>
 <body>
-  <h1>Agenda des événements à Tana</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Date</th>
-        <th>Heure</th>
-        <th>Lieu</th>
-        <th>Événement</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2025-06-22</td>
-        <td>19h00</td>
-        <td>Ivato</td>
-        <td>Podium sy Bal Paska</td>
-      </tr>
-      <tr>
-        <td>2025-06-23</td>
-        <td>14h00</td>
-        <td>Analakely</td>
-        <td>Concert Gospel</td>
-      </tr>
-      <tr>
-        <td>2025-06-25</td>
-        <td>10h00</td>
-        <td>Alarobia</td>
-        <td>Marché de créateurs artisanaux</td>
-      </tr>
-      <tr>
-        <td>2025-06-26</td>
-        <td>16h00</td>
-        <td>Ambohijatovo</td>
-        <td>Expo "Jeunes Talents Mada"</td>
-      </tr>
-      <tr>
-        <td>2025-06-28</td>
-        <td>20h00</td>
-        <td>Ambatonakanga</td>
-        <td>Soirée Slam & Po
+  <h2 id="mois"></h2>
+  <table id="calendrier"></table>
+
+  <script>
+    const moisNoms = ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
+    const aujourdHui = new Date();
+    const mois = aujourdHui.getMonth();
+    const annee = aujourdHui.getFullYear();
+
+    document.getElementById("mois").textContent = `${moisNoms[mois]} ${annee}`;
+
+    function genererCalendrier(mois, annee) {
+      const premierJour = new Date(annee, mois, 1).getDay();
+      const joursDansMois = new Date(annee, mois + 1, 0).getDate();
+      let html = "<tr>";
+      const jours = ["Dim", "Lun", "Mar", "Mer", "Jeu", "Ven", "Sam"];
+      for (let j of jours) { html += `<th>${j}</th>`; }
+      html += "</tr><tr>";
+      let jourSemaine = premierJour === 0 ? 6 : premierJour - 1; // Ajuste pour commencer par lundi
+      for (let i = 0; i < jourSemaine; i++) {
+        html += "<td></td>";
+      }
+      for (let jour = 1; jour <= joursDansMois; jour++) {
+        if (jourSemaine === 7) {
+          html += "</tr><tr>";
+          jourSemaine = 0;
+        }
+        html += `<td>${jour}</td>`;
+        jourSemaine++;
+      }
+      while (jourSemaine < 7 && jourSemaine !== 0) {
+        html += "<td></td>";
+        jourSemaine++;
+      }
+      html += "</tr>";
+      document.getElementById("calendrier").innerHTML = html;
+    }
+
+    genererCalendrier(mois, annee);
+  </script>
+</body>
+</html>
